# ordinal

./: Cargo.toml
src/: graphql.rs  main.rs  smart.rs  sysinfo.rs
src/smart/: ffi.rs
src/sysinfo/: models.rs
